modified data download

--- a/Data_Acquisition.ipynb
+++ b/Data_Acquisition.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,17 +66,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "246\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/3\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/4\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/1510\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/2972\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/2975\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/2977\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/8715\n"
+     ]
+    }
+   ],
    "source": [
     "redshift = 2\n",
     "#this initializes the values in simulation_data.galaxies.galaxy_population\n",
-    "ids = my_galaxy_population.select_galaxies(redshift=redshift, mass_min=10.5, mass_max=12)\n",
+    "ids = my_galaxy_population.select_galaxies(redshift=redshift, mass_min=10.5, mass_max=10.6)\n",
+    "print(len(ids))\n",
     "\n",
     "#this gets and saves the particle data for each galaxy in our selection\n",
     "for idx in ids:\n",
     "    get_galaxy_particle_data(id=idx, redshift=redshift, populate_dict=False)\n",
     "    #Download Stellar Assembly Files for the chosen redshift before attempting to get particle assembly data\n",
-    "    get_stellar_assembly_data(id=idx, redshift=redshift, populate_dict==False)"
+    "    #get_stellar_assembly_data(id=idx, redshift=redshift, populate_dict=False)"
    ]
   },
   {
@@ -178,13 +194,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ids': array([     0,      1,      2, ..., 184169, 186241, 195414]),\n",
+       " 'median_age': array([1.15806843, 1.07934631, 1.70002201, ..., 1.04537836, 1.45133827,\n",
+       "        1.93385962]),\n",
+       " 'halfmass_radius': array([9.2798445 , 3.13625627, 0.85252436, ..., 1.21188859, 1.05147131,\n",
+       "        0.71144572]),\n",
+       " 'total_mass': array([11.97060448, 10.7967009 , 10.77381602, ..., 10.50468291,\n",
+       "        10.57063462, 10.52393339]),\n",
+       " 'halflight_radius_U': array([15.61039366,  4.0422727 ,  1.06248569, ...,  0.97892602,\n",
+       "         1.24148651,  1.03229471]),\n",
+       " 'halflight_radius_V': array([11.5279175 ,  3.9876284 ,  0.96947088, ...,  1.11666748,\n",
+       "         1.1397898 ,  0.87938926]),\n",
+       " 'halflight_radius_I': array([10.6169511 ,  3.74454131,  0.93232646, ...,  1.13035099,\n",
+       "         1.10640896,  0.83016008]),\n",
+       " 'newbin_current_SFR': array([43.31041718, 41.95539474,  0.        , ...,  9.15313339,\n",
+       "         0.        ,  0.        ]),\n",
+       " 'maximum_merger_ratio_30kpc_current_fraction': array([0.20396062, 0.19556973, 0.00793448, ..., 0.02536893, 0.00296112,\n",
+       "        0.02425457])}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "redshift = 2\n",
     "#this initializes the values in simulation_data.galaxies.galaxy_population\n",
-    "ids = my_galaxy_population.select_galaxies(redshift=redshift, mass_min=10.5, mass_max=12)\n",
+    "ids = my_galaxy_population.select_galaxies(redshift=redshift, mass_min=10.5, mass_max=10.6)\n",
     "\n",
     "#calculate halo properties and store calculated data\n",
     "my_galaxy_population.get_galaxy_population_data()"
@@ -236,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
