progress after draft2 deadline

--- a/Data_Acquisition.ipynb
+++ b/Data_Acquisition.ipynb
@@ -64,28 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "246\n",
-      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/3\n",
-      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/4\n",
-      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/1510\n",
-      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/2972\n",
-      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/2975\n",
-      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/2977\n",
-      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/8715\n"
+      "http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/?mass_stars__gt=2.14212688699806&mass_stars__lt=67.74\n",
+      "1045\n"
      ]
     }
    ],
    "source": [
     "redshift = 2\n",
     "#this initializes the values in simulation_data.galaxies.galaxy_population\n",
-    "ids = my_galaxy_population.select_galaxies(redshift=redshift, mass_min=10.5, mass_max=10.6)\n",
+    "ids = my_galaxy_population.select_galaxies(redshift=redshift, mass_min=10.5, mass_max=12)\n",
     "print(len(ids))\n",
     "\n",
     "#this gets and saves the particle data for each galaxy in our selection\n",
@@ -166,19 +162,76 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1045 1045\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/70288\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/60203\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/58081\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/61950\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/47264\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/73078\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/67349\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/51947\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/90645\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/69207\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/72135\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/69837\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/56887\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/46701\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/54294\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/61552\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/42971\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/50518\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/50238\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/73753\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/57631\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/49916\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/71606\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/63211\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/68372\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/89640\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/83416\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/47011\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/67188\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/57560\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/59333\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/85064\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/51849\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/62927\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/75151\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/67701\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/76142\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/69029\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/48215\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/82683\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/49033\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/72334\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/49615\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=3/subhalos/62173\n"
+     ]
+    }
+   ],
    "source": [
     "with h5py.File('redshift_ids.hdf5', 'r') as f:\n",
     "    z1_5_ids = f['z1.5_ids'][:]\n",
     "    z3_ids = f['z3_ids'][:]\n",
+    "    \n",
+    "print(len(z1_5_ids), len(z3_ids))\n",
     "\n",
     "redshift = 1.5\n",
     "for idx in z1_5_ids:\n",
     "    get_galaxy_particle_data(id=idx, redshift=redshift, populate_dict=False)\n",
     "    \n",
     "redshift = 3\n",
-    "for idx in z1_5_ids:\n",
-    "    get_galaxy_particle_data(id=idx, redshift=redshift, populate_dict=False)"
+    "for idx in z3_ids:\n",
+    "    if idx in [4519623, -1]:\n",
+    "        pass\n",
+    "    else:\n",
+    "        get_galaxy_particle_data(id=idx, redshift=redshift, populate_dict=False)"
    ]
   },
   {
@@ -194,9 +247,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/?mass_stars__gt=2.14212688699806&mass_stars__lt=67.74\n",
+      "range(0, 1045)\n",
+      "1045\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -207,19 +271,23 @@
        "        0.71144572]),\n",
        " 'total_mass': array([11.97060448, 10.7967009 , 10.77381602, ..., 10.50468291,\n",
        "        10.57063462, 10.52393339]),\n",
-       " 'halflight_radius_U': array([15.61039366,  4.0422727 ,  1.06248569, ...,  0.97892602,\n",
-       "         1.24148651,  1.03229471]),\n",
-       " 'halflight_radius_V': array([11.5279175 ,  3.9876284 ,  0.96947088, ...,  1.11666748,\n",
-       "         1.1397898 ,  0.87938926]),\n",
-       " 'halflight_radius_I': array([10.6169511 ,  3.74454131,  0.93232646, ...,  1.13035099,\n",
-       "         1.10640896,  0.83016008]),\n",
        " 'newbin_current_SFR': array([43.31041718, 41.95539474,  0.        , ...,  9.15313339,\n",
        "         0.        ,  0.        ]),\n",
-       " 'maximum_merger_ratio_30kpc_current_fraction': array([0.20396062, 0.19556973, 0.00793448, ..., 0.02536893, 0.00296112,\n",
-       "        0.02425457])}"
+       " 'FeH_Re': array([-0.019475  ,  0.06504367,  0.08954783, ...,  0.12228309,\n",
+       "         0.05689508, -0.01350551]),\n",
+       " 'MgFe_Re': array([0.41997495, 0.35184819, 0.37041804, ..., 0.32551399, 0.34847784,\n",
+       "        0.40531605]),\n",
+       " 'MgH_Re': array([0.36271209, 0.35576349, 0.40462014, ..., 0.40744367, 0.34812796,\n",
+       "        0.31582388]),\n",
+       " 'FeH_1kpc': array([ 0.09133583,  0.22419962,  0.06360424, ...,  0.14642388,\n",
+       "         0.06111883, -0.04799986]),\n",
+       " 'MgFe_1kpc': array([0.41191784, 0.31665927, 0.37638125, ..., 0.3196165 , 0.34702504,\n",
+       "        0.41162452]),\n",
+       " 'MgH_1kpc': array([0.4606514 , 0.49780408, 0.38041148, ..., 0.42800006, 0.35164312,\n",
+       "        0.27924857])}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +295,7 @@
    "source": [
     "redshift = 2\n",
     "#this initializes the values in simulation_data.galaxies.galaxy_population\n",
-    "ids = my_galaxy_population.select_galaxies(redshift=redshift, mass_min=10.5, mass_max=10.6)\n",
+    "ids = my_galaxy_population.select_galaxies(redshift=redshift, mass_min=10.5, mass_max=12)\n",
     "\n",
     "#calculate halo properties and store calculated data\n",
     "my_galaxy_population.get_galaxy_population_data()"
