as of February 2022

--- a/z=4_Galaxy_Abundances.ipynb
+++ b/z=4_Galaxy_Abundances.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "2ed75b73-ae04-42cf-bff9-27493d330904",
    "metadata": {
     "tags": []
@@ -122,9 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bcd5bac2-4bc1-427d-ac24-3e79d7bd8eda",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -132,7 +136,104 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "96\n"
+      "http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/?mass_stars__gt=2.14212688699806&mass_stars__lt=67.74\n",
+      "96\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/0\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/1\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/450\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/451\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/672\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/1121\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/1291\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/1292\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/1570\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/1736\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/1737\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/1924\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/2102\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/2330\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/2560\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/2780\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/2997\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/3144\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/3145\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/3264\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/3426\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/3610\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/3729\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/3819\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/3960\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/4318\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/4711\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/5053\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/5180\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/5290\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/5381\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/5504\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/5581\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/5664\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/6077\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/6309\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/6406\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/6483\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/6717\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/7182\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/7272\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/8241\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/8787\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/8910\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/8991\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/9054\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/9318\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/9380\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/9545\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/9954\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/10032\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/10090\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/10429\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/10633\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/10768\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/10817\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/10917\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/11007\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/11082\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/11175\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/11340\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/11386\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/11460\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/11518\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/11565\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/11639\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/11761\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/12440\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/12682\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/12818\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/12881\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/13183\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/13372\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/13459\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/13998\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/14120\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/14176\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/14409\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/15029\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/15135\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/15519\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/15686\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/15812\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/15894\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/16284\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/16436\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/16559\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/18688\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/18727\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/20713\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/20848\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/21667\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/21773\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/22426\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/23910\n",
+      "Downloading http://www.tng-project.org/api/TNG100-1/snapshots/z=4/subhalos/24069\n"
      ]
     }
    ],
@@ -162,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8407cd28-6f99-402c-9a57-0678af1d52b1",
    "metadata": {
     "collapsed": true,
@@ -393,10 +494,58 @@
        "        0.3595092 , 0.35190895, 0.35898712, 0.26243424, 0.3285836 ,\n",
        "        0.36142033, 0.44606349, 0.33423349, 0.37035108, 0.3760303 ,\n",
        "        0.25410157, 0.3196626 , 0.31941777, 0.28329828, 0.25965101,\n",
-       "        0.25560343])}"
+       "        0.25560343]),\n",
+       " 'gas_mass_1kpc': array([1.10826445e+10, 5.11142356e+09, 1.13705971e+10, 2.62019738e+09,\n",
+       "        2.79369143e+09, 1.74846405e+10, 5.37066610e+09, 3.72363171e+09,\n",
+       "        3.45355345e+09, 1.72211839e+09, 4.45600643e+09, 6.02490415e+09,\n",
+       "        5.14793113e+09, 2.16452890e+09, 2.09438426e+09, 2.69238793e+09,\n",
+       "        1.13117981e+10, 6.08454805e+09, 2.98501815e+09, 5.95550449e+09,\n",
+       "        1.01583363e+09, 5.72026003e+09, 3.78384477e+07, 3.77848096e+09,\n",
+       "        3.10819269e+09, 4.97422980e+09, 4.58594088e+09, 9.85613636e+09,\n",
+       "        3.24200524e+09, 6.29152093e+09, 4.79958671e+09, 8.75563090e+09,\n",
+       "        7.79690059e+09, 6.54837436e+09, 1.04353038e+10, 2.03241321e+09,\n",
+       "        7.83913306e+09, 5.23990192e+09, 1.97922188e+09, 3.71217734e+09,\n",
+       "        4.83519407e+09, 3.22307390e+09, 2.66836193e+09, 3.40670343e+09,\n",
+       "        2.74777429e+09, 4.11299022e+09, 3.12268241e+09, 5.59378100e+09,\n",
+       "        3.14607706e+09, 2.14803691e+09, 5.84406516e+09, 1.06451334e+10,\n",
+       "        3.48055792e+09, 4.46576297e+09, 2.74744848e+09, 2.07209237e+09,\n",
+       "        2.96675996e+09, 2.00244410e+09, 1.29592629e+09, 3.15112432e+09,\n",
+       "        9.76458044e+09, 1.76260414e+09, 2.92602529e+09, 3.34666643e+09,\n",
+       "        5.22933822e+09, 2.76027468e+09, 1.17533799e+09, 1.15541611e+09,\n",
+       "        3.76664280e+09, 2.29763184e+09, 2.70506993e+09, 1.25336561e+09,\n",
+       "        2.40814897e+09, 2.87744654e+09, 8.95409296e+09, 3.53297469e+09,\n",
+       "        2.96446766e+09, 1.74840646e+09, 7.19730828e+09, 1.80381192e+09,\n",
+       "        2.79963000e+09, 1.57995124e+09, 2.53740818e+09, 4.89142057e+09,\n",
+       "        3.26578463e+09, 2.05131662e+09, 2.50859891e+09, 4.00664898e+09,\n",
+       "        4.44936735e+09, 8.94016314e+08, 5.19288046e+09, 5.09499525e+09,\n",
+       "        2.84490772e+09, 4.44059239e+09, 2.72541968e+09, 4.33883336e+09]),\n",
+       " 'stellar_mass_1kpc': array([1.20560326e+11, 5.10874166e+10, 1.81838764e+11, 2.38149749e+10,\n",
+       "        1.63894839e+10, 1.76918857e+11, 5.25309331e+10, 1.32503015e+10,\n",
+       "        5.39853552e+10, 1.46146442e+10, 5.17057835e+10, 1.22861965e+11,\n",
+       "        6.20446847e+10, 2.60925941e+10, 1.22913777e+10, 4.59592136e+10,\n",
+       "        1.15296271e+11, 7.19117867e+10, 4.33671872e+10, 4.48778351e+10,\n",
+       "        1.29672619e+10, 1.14247834e+11, 6.74694678e+10, 2.85310957e+10,\n",
+       "        6.60336177e+10, 1.51842597e+10, 5.49906350e+10, 1.11644235e+11,\n",
+       "        5.15676747e+10, 1.28682074e+11, 2.82726440e+10, 3.85387342e+10,\n",
+       "        8.05927131e+10, 7.75406127e+10, 9.64189351e+10, 4.61647465e+10,\n",
+       "        7.95904182e+10, 1.22680258e+10, 2.78917381e+10, 6.03046339e+09,\n",
+       "        8.01632815e+10, 2.57813365e+10, 3.21844141e+10, 4.02249953e+10,\n",
+       "        7.03631627e+10, 4.78429724e+10, 2.50588460e+10, 5.70959296e+10,\n",
+       "        1.13225589e+10, 1.92844295e+10, 4.79327771e+10, 2.84712008e+10,\n",
+       "        1.66742342e+10, 2.99309808e+10, 1.99778849e+10, 4.97232957e+10,\n",
+       "        2.99223063e+10, 3.81018417e+10, 9.85830092e+09, 4.14551515e+10,\n",
+       "        4.32044583e+10, 2.25724927e+10, 3.29179792e+10, 4.52720732e+10,\n",
+       "        3.72321472e+10, 3.56600705e+10, 1.44263294e+10, 1.38555109e+10,\n",
+       "        2.52596700e+10, 1.10340539e+10, 3.73037548e+10, 3.85339107e+10,\n",
+       "        1.09558037e+10, 2.22135849e+10, 2.72937850e+10, 1.50747236e+10,\n",
+       "        2.08774911e+10, 2.70140737e+10, 3.03547298e+10, 1.46188168e+10,\n",
+       "        3.20832970e+10, 1.08534130e+10, 2.32096343e+10, 1.62547188e+10,\n",
+       "        1.28662860e+10, 3.21217870e+10, 3.28923280e+10, 2.96745713e+10,\n",
+       "        4.10475246e+10, 2.28859316e+10, 2.59563546e+10, 2.90639147e+10,\n",
+       "        2.56813812e+10, 2.69648824e+10, 2.56230233e+10, 2.40833935e+10])}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
