--- a/z=0_Galaxy_Abundances.ipynb
+++ b/z=0_Galaxy_Abundances.ipynb
@@ -126,8 +126,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     },
     "tags": []
    },
@@ -686,13 +685,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8407cd28-6f99-402c-9a57-0678af1d52b1",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -701,7 +696,6 @@
      "output_type": "stream",
      "text": [
       "http://www.tng-project.org/api/TNG100-1/snapshots/z=0/subhalos/?mass_stars__gt=2.14212688699806&mass_stars__lt=67.74\n",
-      "range(0, 2855)\n",
       "2855\n"
      ]
     },
@@ -709,8 +703,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jhkim\\anaconda3\\lib\\site-packages\\numpy\\lib\\histograms.py:905: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n"
+      "D:\\Pathak_2021\\simulation_data\\galaxies\\galaxy.py:1483: RuntimeWarning: divide by zero encountered in log10\n",
+      "  return np.log10(total_mass)\n"
      ]
     },
     {
@@ -721,34 +715,22 @@
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "{'ids': array([     1,      2,      3, ..., 560800, 585369, 586131]),\n",
-       " 'median_age': array([ 9.87164558, 11.07052607,  7.30278334, ...,  8.4016782 ,\n",
-       "        10.2878614 , 10.26753843]),\n",
-       " 'halfmass_radius': array([25.11426041, 22.11987009,  9.6402421 , ...,  2.53277236,\n",
-       "         2.7874225 ,  2.73206377]),\n",
-       " 'total_mass': array([11.74725052, 11.79736385, 11.23439457, ..., 10.56927816,\n",
-       "        10.78007249, 10.50000874]),\n",
-       " 'newbin_current_SFR': array([0.03744267, 0.22419809, 0.10633989, ...,        nan,        nan,\n",
-       "               nan]),\n",
-       " 'FeH_Re': array([-0.15880045, -0.0032826 ,  0.00673328, ..., -0.05553907,\n",
-       "         0.00167335, -0.02951944]),\n",
-       " 'MgFe_Re': array([0.35183337, 0.3710534 , 0.31958219, ..., 0.34042057, 0.35549924,\n",
-       "        0.33357501]),\n",
-       " 'MgH_Re': array([0.15538374, 0.30815378, 0.28689194, ..., 0.23761673, 0.30300882,\n",
-       "        0.23983525]),\n",
-       " 'FeH_1kpc': array([0.05385314, 0.26780096, 0.09563227, ..., 0.01395701, 0.06112544,\n",
-       "        0.06696422]),\n",
-       " 'MgFe_1kpc': array([0.35960132, 0.32619372, 0.30722046, ..., 0.33187291, 0.33845365,\n",
-       "        0.30953291]),\n",
-       " 'MgH_1kpc': array([0.39142078, 0.56799549, 0.37145707, ..., 0.31292811, 0.35716081,\n",
-       "        0.3342528 ])}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "\"Unable to open object (object 'OH_Re' doesn't exist)\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-975c59ef65af>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#calculate halo properties and store calculated data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mmy_galaxy_population\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_galaxy_population_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\Pathak_2021\\simulation_data\\galaxies\\galaxy_population.py\u001b[0m in \u001b[0;36mget_galaxy_population_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    156\u001b[0m             \u001b[0mgas_mass_1kpc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'gas_mass_1kpc'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    157\u001b[0m             \u001b[0mstellar_mass_1kpc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'stellar_mass_1kpc'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 158\u001b[1;33m             \u001b[0mOH_Re\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'OH_Re'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    159\u001b[0m             \u001b[0mOH_1kpc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'OH_1kpc'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    160\u001b[0m             \u001b[0mOFe_Re\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'OFe_Re'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mh5py\\_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mh5py\\_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\h5py\\_hl\\group.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    262\u001b[0m                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Invalid HDF5 object reference\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    263\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 264\u001b[1;33m             \u001b[0moid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mh5o\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mid\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_e\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlapl\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_lapl\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    265\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    266\u001b[0m         \u001b[0motype\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mh5i\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_type\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moid\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mh5py\\_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mh5py\\_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mh5py\\h5o.pyx\u001b[0m in \u001b[0;36mh5py.h5o.open\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"Unable to open object (object 'OH_Re' doesn't exist)\""
+     ]
     }
    ],
    "source": [
