--- a/Data_Acquisition.ipynb
+++ b/Data_Acquisition.ipynb
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -1274,6 +1274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "http://www.tng-project.org/api/TNG100-1/snapshots/z=2/subhalos/?mass_stars__gt=2.14212688699806&mass_stars__lt=67.74\n",
       "1045\n"
      ]
     },
@@ -1312,10 +1313,12 @@
        " 'FeH_gas_Re': <Closed HDF5 dataset>,\n",
        " 'FeH_gas_1kpc': <Closed HDF5 dataset>,\n",
        " 'OH_gas_Re': <Closed HDF5 dataset>,\n",
-       " 'OH_gas_1kpc': <Closed HDF5 dataset>}"
+       " 'OH_gas_1kpc': <Closed HDF5 dataset>,\n",
+       " 'percentile_age': array([0.90976386, 1.44025343, 1.1528455 , ..., 1.27146692, 1.17978361,\n",
+       "        1.06745082])}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
