printed all Table 1 values

--- a/Paper_Figures.ipynb
+++ b/Paper_Figures.ipynb
@@ -2122,12 +2122,18 @@
      "output_type": "stream",
      "text": [
       "0-1 kpc\n",
+      "fgas = 0.045\n",
+      "[OH]_gas = 0.643\n",
       "[Z_1] = 1.119\n",
       "[Z_0] = -0.364\n",
       "3-4 kpc\n",
+      "fgas = 0.271\n",
+      "[OH]_gas = 0.192\n",
       "[Z_1] = 0.516\n",
       "[Z_0] = -0.739\n",
       "10-11 kpc\n",
+      "fgas = 0.370\n",
+      "[OH]_gas = -0.124\n",
       "[Z_1] = 0.240\n",
       "[Z_0] = -1.524\n"
      ]
@@ -2236,6 +2242,8 @@
     "    ax1.plot(xx1, func1(10**xx1, *optParam1), '--', color=radii.color, linewidth=lw)\n",
     "    ax2.plot(xx1, func2(10**xx1, *optParam2), '--', color=radii.color, linewidth=lw)\n",
     "    print(radii.label)\n",
+    "    print('fgas = %5.3f' % mu1)\n",
+    "    print('[OH]_gas = %5.3f' % med_OH_gas)\n",
     "    print('[Z_1] = %5.3f' % np.log10(optParam1))\n",
     "    print('[Z_0] = %5.3f' % np.log10(optParam2))\n",
     "\n",
